--- a/README/README
+++ b/README/README
@@ -1,3 +1,4 @@
-15/11/2020
+Last Modified: 16/05/2024
 Custom Alert Action developed to send a HTTP request
-Brendan Cooper
+Brendan Cooper 
+https://github.com/brendancooper/ta_http_action
